# ForPIM

gem5/: SConstruct
llvm-pim-pass/: CMakeLists.txt
llvm-pim-pass/src/: CMakeLists.txt  PIMVectorizationPass.cpp
llvm-pim-pass/workloads/: Makefile
llvm-pim-pass/workloads/src/: gemV2.c  minimal_and.c
